@@ -1,20 +1,17 @@
+import java.util.regex.Pattern
+
 buildscript {
     ext {
-        kotlin_version = '1.6.10'
-        springBootVersion = '2.6.3'
-        hibernateVersion = '5.11.0.Final'
-        httpClientVersion = '4.5.11'
-        swaggerVersion = '3.0.0'
+        springBootVersion = '2.6.4'
         jasyptVersion = '3.0.4'
+        languagetool = '5.6'
+        tika = '2.3.0'
     }
     repositories {
         mavenCentral()
-        maven {
-            url "https://packages.atlassian.com/mvn/maven-external/"
-        }
     }
+
     dependencies { 
-    	classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     	classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
@@ -23,15 +20,12 @@ plugins {
     id 'org.springframework.boot' version "${springBootVersion}"
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version "1.6.10"
     id "com.gorylenko.gradle-git-properties" version '2.4.0'
-    id 'de.undercouch.download' version '5.0.1'
+    id 'de.undercouch.download' version '5.0.2'
     id 'eclipse'
     id 'jacoco'
     id 'org.sonarqube' version '3.3'
 }
-
-//apply from: 'liquibase.gradle'
 
 sonarqube {
     properties {
@@ -44,9 +38,9 @@ sonarqube {
 
 jar {
     archiveBaseName = 'viglet-turing'
-    archiveVersion = '0.3.6'
+    archiveVersion = '0.3.5'
 }
-
+ 
 eclipse {
     classpath {
         file {
@@ -72,24 +66,23 @@ bootJar {
     archiveBaseName = 'viglet-turing'
 }
 
+bootRun {
+   jvmArgs = ["--add-modules", "java.se", 
+  "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+  "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+  "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+  "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+  "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
 repositories {
     mavenCentral()
-    maven {
-        url "https://packages.atlassian.com/mvn/maven-external/"
-    }
 }
 
 group = 'com.viglet.turing'
-sourceCompatibility = 17
-targetCompatibility = 17
-
-
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
-	kotlinOptions {
-		freeCompilerArgs = ['-Xjsr305=strict']
-		jvmTarget = "17"
-	}
-}
+sourceCompatibility = 14
+targetCompatibility = 14
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -107,70 +100,9 @@ configurations {
     all*.exclude group: 'xml-apis'
 }
 
-ext['log4j2.version'] = '2.17.1'
-
 dependencies {
     compileOnly group: 'javax.servlet', name: 'servlet-api', version: '2.5'
 	
-	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-reflect'
-	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8'
-
-    implementation(group: 'org.apache.hadoop', name: 'hadoop-common', version: '3.3.1') {
-        exclude(module: 'guava')
-        exclude(module: 'commons-logging')
-        exclude(module: 'log4j')
-        exclude(module: 'slf4j-api')
-        exclude(module: 'slf4j-log4j12')
-        exclude(module: 'jackson-mapper-asl')
-        exclude(module: 'jackson-core-asl')
-        exclude(module: 'jersey-core')
-        exclude(module: 'jersey-json')
-        exclude(module: 'jersey-server')
-        exclude(module: 'jasper-runtime')
-        exclude(module: 'jasper-compiler')
-        exclude(module: 'servlet-api')
-        exclude(module: 'jsp-api')
-        exclude(module: 'commons-el')
-
-    }
-
-    implementation(group: 'org.apache.hadoop', name: 'hadoop-hdfs', version: '3.3.1') {
-        exclude(module: 'jackson-mapper-asl')
-        exclude(module: 'jackson-core-asl')
-        exclude(module: 'jersey-core')
-        exclude(module: 'jersey-json')
-        exclude(module: 'jersey-server')
-        exclude(module: 'jasper-runtime')
-        exclude(module: 'jasper-compiler')
-        exclude(module: 'servlet-api')
-        exclude(module: 'jsp-api')
-        exclude(module: 'log4j')
-    }
-    implementation(group: 'org.apache.hadoop', name: 'hadoop-auth', version: '3.3.1') {
-        exclude(module: 'commons-logging')
-        exclude(module: 'log4j')
-        exclude(module: 'slf4j-api')
-        exclude(module: 'slf4j-log4j12')
-        exclude(module: 'jackson-mapper-asl')
-        exclude(module: 'jackson-core-asl')
-        exclude(module: 'jersey-core')
-        exclude(module: 'jersey-json')
-        exclude(module: 'jersey-server')
-        exclude(module: 'jasper-runtime')
-        exclude(module: 'jasper-compiler')
-        exclude(module: 'servlet-api')
-        exclude(module: 'jsp-api')
-    }
-    implementation(group: 'org.apache.hadoop', name: 'hadoop-core', version: '1.2.1') {
-        exclude(module: 'jersey-core')
-        exclude(module: 'jersey-json')
-        exclude(module: 'jersey-server')
-        exclude(module: 'jackson-mapper-asl')
-        exclude(module: 'jackson-core-asl')
-        exclude(module: 'hsqldb')
-        exclude(module: 'commons-el')
-    }
-
     // Spring Boot
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "${springBootVersion}"
@@ -199,10 +131,10 @@ dependencies {
     implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: "${jasyptVersion}"
 
     // Spring
-    implementation group: 'org.springframework', name: 'spring-test', version: '5.3.16'
+    implementation group: 'org.springframework', name: 'spring-test', version: '5.3.17'
 
     // Jackson
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-hibernate5', version: '2.13.1'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-hibernate5', version: '2.13.2'
 
     // H2
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
@@ -219,9 +151,6 @@ dependencies {
     // CoreNLP
     implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '4.4.0'
 
-    // ASM
-    implementation group: 'asm', name: 'asm', version: '4.0_RC2'
-
     // OpenNLP
     implementation group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.4'
 
@@ -229,22 +158,22 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
     implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
 
-    // EhCache
-    implementation group: 'net.sf.ehcache', name: 'ehcache', version: '2.10.10.1.14'
+    // Hazelcast
+	implementation group: 'com.hazelcast', name: 'hazelcast-all', version: '4.2.4'
 
     // Tika
-    implementation group: 'org.apache.tika', name: 'tika-core', version: '2.3.0'
-    implementation group: 'org.apache.tika', name: 'tika-parsers', version: '2.3.0'
-    implementation group: 'org.apache.tika', name: 'tika-parser-pdf-module', version: '2.3.0'
-    implementation group: 'org.apache.tika', name: 'tika-parser-text-module', version: '2.3.0'
-    implementation group: 'org.apache.tika', name: 'tika-parser-ocr-module', version: '2.3.0'
-    implementation group: 'org.apache.tika', name: 'tika-parser-microsoft-module', version: '2.3.0'
+    implementation group: 'org.apache.tika', name: 'tika-core', version: "${tika}"
+    implementation group: 'org.apache.tika', name: 'tika-parsers', version: "${tika}"
+    implementation group: 'org.apache.tika', name: 'tika-parser-pdf-module', version: "${tika}"
+    implementation group: 'org.apache.tika', name: 'tika-parser-text-module', version: "${tika}"
+    implementation group: 'org.apache.tika', name: 'tika-parser-ocr-module', version: "${tika}"
+    implementation group: 'org.apache.tika', name: 'tika-parser-microsoft-module', version: "${tika}"
     implementation group: 'com.levigo.jbig2', name: 'levigo-jbig2-imageio', version: '2.0'
     implementation group: 'com.github.jai-imageio', name: 'jai-imageio-core', version: '1.4.0'
     implementation group: 'com.github.jai-imageio', name: 'jai-imageio-jpeg2000', version: '1.4.0'
 
     //ActiveMQ using KahaDB
-    implementation group: 'org.apache.activemq', name: 'activemq-kahadb-store', version: '5.16.4'
+    implementation group: 'org.apache.activemq', name: 'activemq-kahadb-store', version: '5.17.0'
 
     // SpringDoc
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.6'
@@ -256,7 +185,8 @@ dependencies {
     implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.25'
 
     //Language Tool
-    implementation group: 'org.languagetool', name: 'language-all', version: '5.6'
+    implementation group: 'org.languagetool', name: 'language-en', version: "${languagetool}"
+    implementation group: 'org.languagetool', name: 'language-pt', version: "${languagetool}"
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
